methods.basics.Methods.scala.error
Erreur de compilation :
Methods:2: error: not found: value nbPas
  nbPas = 0;
  ^Methods:4: error: not found: value nbPas
    nbPas++;
    ^