methods.basics.Methods.scala.code
def goAndGet() {
  nbPas = 0;
  while(!estSurBiscuit()){
    nbPas++;
  }
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}